Admin Crud Logic

--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,8 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url "https://maven.google.com" // Google's Maven repository
-        }
-
+        maven {url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
     }
