--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     compile 'com.google.firebase:firebase-firestore:12.0.0'
     compile 'com.google.firebase:firebase-auth:12.0.0'
     compile 'com.google.android.gms:play-services-auth:12.0.0'
+    compile 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
